--- a/LAB_1_GP_.ipynb
+++ b/LAB_1_GP_.ipynb
@@ -3,7 +3,9 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "authorship_tag": "ABX9TyNSAr3UY5B9n6OxJRej/2Pz",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -97,6 +99,16 @@
     }
   },
   "cells": [
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/acesur/GP-Lab1/blob/main/LAB_1_GP_.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
     {
       "cell_type": "code",
       "execution_count": 3,
