--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOnEXTTPNTs7nynDXlsfEOb",
+      "authorship_tag": "ABX9TyMSBHItNZhr9z4ihcl/cC2M",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -16,7 +16,7 @@
     },
     "widgets": {
       "application/vnd.jupyter.widget-state+json": {
-        "41f8ddede0d74fddad97940d74e758c4": {
+        "d072f9ad9629449191c9a20f97dd6b92": {
           "model_module": "@jupyter-widgets/output",
           "model_name": "OutputModel",
           "model_module_version": "1.0.0",
@@ -29,21 +29,21 @@
             "_view_module": "@jupyter-widgets/output",
             "_view_module_version": "1.0.0",
             "_view_name": "OutputView",
-            "layout": "IPY_MODEL_d0aa1d0575dc4b568f817ce26be55440",
+            "layout": "IPY_MODEL_1ce27defec89489ab5f2c2b5c7806bdc",
             "msg_id": "",
             "outputs": [
               {
                 "output_type": "display_data",
                 "data": {
-                  "text/plain": "                                                                                                                   \n \u001b[1m \u001b[0m\u001b[1mProgress                \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mDraws\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mDivergences\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mStep size\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mGrad evals\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mSampling Speed \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mElapsed\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mRemaining\u001b[0m\u001b[1m \u001b[0m \n ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n  \u001b[38;2;31;119;180m━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m   1500    0             0.90        3            1213.98 draws/s   0:00:01   0:00:00    \n  \u001b[38;2;31;119;180m━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m   1500    0             0.54        7            626.99 draws/s    0:00:02   0:00:00    \n                                                                                                                   \n",
-                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">                                                                                                                   \n <span style=\"font-weight: bold\"> Progress                 </span> <span style=\"font-weight: bold\"> Draws </span> <span style=\"font-weight: bold\"> Divergences </span> <span style=\"font-weight: bold\"> Step size </span> <span style=\"font-weight: bold\"> Grad evals </span> <span style=\"font-weight: bold\"> Sampling Speed  </span> <span style=\"font-weight: bold\"> Elapsed </span> <span style=\"font-weight: bold\"> Remaining </span> \n ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n  <span style=\"color: #1f77b4; text-decoration-color: #1f77b4\">━━━━━━━━━━━━━━━━━━━━━━━━</span>   1500    0             0.90        3            1213.98 draws/s   0:00:01   0:00:00    \n  <span style=\"color: #1f77b4; text-decoration-color: #1f77b4\">━━━━━━━━━━━━━━━━━━━━━━━━</span>   1500    0             0.54        7            626.99 draws/s    0:00:02   0:00:00    \n                                                                                                                   \n</pre>\n"
+                  "text/plain": "                                                                                                                   \n \u001b[1m \u001b[0m\u001b[1mProgress                \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mDraws\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mDivergences\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mStep size\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mGrad evals\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mSampling Speed \u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mElapsed\u001b[0m\u001b[1m \u001b[0m \u001b[1m \u001b[0m\u001b[1mRemaining\u001b[0m\u001b[1m \u001b[0m \n ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n  \u001b[38;2;31;119;180m━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m   1500    0             0.90        3            1274.43 draws/s   0:00:01   0:00:00    \n  \u001b[38;2;31;119;180m━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m   1500    0             0.54        7            626.94 draws/s    0:00:02   0:00:00    \n                                                                                                                   \n",
+                  "text/html": "<pre style=\"white-space:pre;overflow-x:auto;line-height:normal;font-family:Menlo,'DejaVu Sans Mono',consolas,'Courier New',monospace\">                                                                                                                   \n <span style=\"font-weight: bold\"> Progress                 </span> <span style=\"font-weight: bold\"> Draws </span> <span style=\"font-weight: bold\"> Divergences </span> <span style=\"font-weight: bold\"> Step size </span> <span style=\"font-weight: bold\"> Grad evals </span> <span style=\"font-weight: bold\"> Sampling Speed  </span> <span style=\"font-weight: bold\"> Elapsed </span> <span style=\"font-weight: bold\"> Remaining </span> \n ───────────────────────────────────────────────────────────────────────────────────────────────────────────────── \n  <span style=\"color: #1f77b4; text-decoration-color: #1f77b4\">━━━━━━━━━━━━━━━━━━━━━━━━</span>   1500    0             0.90        3            1274.43 draws/s   0:00:01   0:00:00    \n  <span style=\"color: #1f77b4; text-decoration-color: #1f77b4\">━━━━━━━━━━━━━━━━━━━━━━━━</span>   1500    0             0.54        7            626.94 draws/s    0:00:02   0:00:00    \n                                                                                                                   \n</pre>\n"
                 },
                 "metadata": {}
               }
             ]
           }
         },
-        "d0aa1d0575dc4b568f817ce26be55440": {
+        "1ce27defec89489ab5f2c2b5c7806bdc": {
           "model_module": "@jupyter-widgets/base",
           "model_name": "LayoutModel",
           "model_module_version": "1.2.0",
@@ -112,6 +112,9 @@
     {
       "cell_type": "code",
       "source": [
+        "# ===================================================================\n",
+        "# SIMPLE BAYESIAN LIDAR ANALYSIS - GOOGLE COLAB READY\n",
+        "# ===================================================================\n",
         "import numpy as np\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
@@ -119,8 +122,6 @@
         "import arviz as az\n",
         "import warnings\n",
         "warnings.filterwarnings('ignore')\n",
-        "\n",
-        "# Set random seed for reproducibility\n",
         "np.random.seed(42)\n",
         "\n",
         "print(\"=== Creating LIDAR Dataset ===\")\n",
@@ -250,14 +251,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 1000,
           "referenced_widgets": [
-            "41f8ddede0d74fddad97940d74e758c4",
-            "d0aa1d0575dc4b568f817ce26be55440"
+            "d072f9ad9629449191c9a20f97dd6b92",
+            "1ce27defec89489ab5f2c2b5c7806bdc"
           ]
         },
         "id": "Ok4Z3AZEMuZg",
-        "outputId": "abe4e6d8-5da1-4f54-bbe7-ae962038c529"
+        "outputId": "c8444c98-5eeb-459f-f330-c0becd2b41b3"
       },
-      "execution_count": 2,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -279,7 +280,7 @@
             "application/vnd.jupyter.widget-view+json": {
               "version_major": 2,
               "version_minor": 0,
-              "model_id": "41f8ddede0d74fddad97940d74e758c4"
+              "model_id": "d072f9ad9629449191c9a20f97dd6b92"
             }
           },
           "metadata": {}
