--- a/Lab1.ipynb
+++ b/Lab1.ipynb
@@ -22,7 +22,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/acesur/GP-Lab1/blob/main/Lab1.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\\\"https://colab.research.google.com/github/acesur/GP-Lab1/blob/main/Lab1.ipynb\\\" target=\\\"_parent\\\"><img src=\\\"https://colab.research.google.com/assets/colab-badge.svg\\\" alt=\\\"Open In Colab\\\"/></a>"
       ]
     },
     {
@@ -31,13 +31,13 @@
         "id": "title"
       },
       "source": [
-        "# Bayesian Regression Analysis of LIDAR Data\n",
-        "\n",
-        "This notebook performs Bayesian regression analysis on synthetic LIDAR data:\n",
-        "- Creates 221 LIDAR observations\n",
-        "- Randomly selects 100 data points\n",
-        "- Fits Bayesian quadratic regression model\n",
-        "- Shows scatter plot with fitted model\n",
+        "# Bayesian Regression Analysis of LIDAR Data\\n",
+        "\\n",
+        "This notebook performs Bayesian regression analysis on synthetic LIDAR data:\\n",
+        "- Creates 221 LIDAR observations\\n",
+        "- Randomly selects 100 data points\\n",
+        "- Fits Bayesian quadratic regression model\\n",
+        "- Shows scatter plot with fitted model\\n",
         "- Displays posterior distributions of parameters"
       ]
     },
@@ -49,9 +49,9 @@
       "execution_count": null,
       "outputs": [],
       "source": [
-        "# Install required packages\n",
-        "!pip install pymc arviz -q\n",
-        "print(\"📦 Packages installed successfully!\")"
+        "# Install required packages\\n",
+        "!pip install pymc arviz -q\\n",
+        "print('📦 Packages installed successfully!')"
       ]
     },
     {
